--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons-kit": "^1.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-tabs": "^3.2.0",
+    "styled-components": "^5.2.1",
+    "styled-media-query": "^2.1.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
