put the right name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://raouf21_dev.github.io/netflix1",
+  "homepage": "http://raouf21_dev.github.io/netflix",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
