--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://raouf21-dev.github.io/",
+  "homepage": "https://raouf21-dev.github.io/netflix-new-project",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
